feat(entidade): Add entidade Estoque